--- a/local.yml
+++ b/local.yml
@@ -4,41 +4,11 @@
   connection: local
 
   vars:
-    teleport_version: "17.2.7"
     actual_user: "{{ lookup('env', 'USER') }}"
   vars_files:
     - group_vars/all.yml
 
-  roles:
-    - steam
-    - bluetooth-wifi
-    #- google-chrome
-    #- vscode-extensions
-
-  tasks:
-  #- name: user output
-  #  debug:
-  #    msg: "{{ actual_user }}"
-
-  - name: Create folder structure
-    become_user: "{{ actual_user }}"
-    file:
-      path: "{{ item }}"
-      state: directory
-      mode: '0755'
-    loop:
-      - /home/{{ actual_user }}/Github/
-      - /home/{{ actual_user }}/cloud.dyllick-brenzinger.com/
-      
-
-
-  - name: Stop the playbook
-    meta: end_play
-
-  # google chrome
-  
-
-  # user check...
+  pre_tasks:
   - name: User check
     assert:
       that:
@@ -51,16 +21,47 @@
         - ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu' or ansible_distribution == 'Pop!_OS'
       fail_msg: "This role is only intended for Debian/Ubuntu systems"
 
-  - name: GNOME Desktop check
-    ansible.builtin.command: echo $XDG_CURRENT_DESKTOP
+  - name: Desktop check
+    command: echo $XDG_CURRENT_DESKTOP
     register: desktop_env
     changed_when: false
 
-  - name: GNOME Desktop check
-    ansible.builtin.assert:
-      that: "'GNOME' in desktop_env.stdout"
-      fail_msg: "The current desktop environment is not GNOME"
-      success_msg: "The current desktop environment is GNOME"
+  - name: Desktop check
+    assert:
+      that: "desktop_env.stdout in ['GNOME', 'Unity']"
+      fail_msg: "The current desktop environment is neither GNOME nor Unity"
+      success_msg: "This is a desktop environment"
+  
+  # DEBUG MESSAGE
+  #- name: user output
+  #  debug:
+  #    msg: "{{ actual_user }}"
+
+  roles:
+    #- basic-tools
+    #- steam
+    #- bluetooth-wifi
+    #- seafile-client
+    #- flameshot
+    - teleport
+    #- google-chrome
+    #- vscode
+
+  tasks:
+  - name: Stop the playbook
+    meta: end_play
+
+  - name: Create folder structure
+    become_user: "{{ actual_user }}"
+    file:
+      path: "{{ item }}"
+      state: directory
+      mode: '0755'
+    loop:
+      - /home/{{ actual_user }}/Github/
+      - /home/{{ actual_user }}/cloud.dyllick-brenzinger.com/
+
+
 
   - name: Set lock screen shortcut to Super+L
     become_user: "{{ actual_user }}"
@@ -69,112 +70,10 @@
       value: "['<Super>l']"
       state: present
 
-  # seafile
-  - name: Add Seafile GPG key
-    apt_key:
-      url: https://linux-clients.seafile.com/seafile.asc
-      state: present
-
-  - name: Add Seafile repository
-    apt_repository:
-      repo: deb [arch=amd64] https://linux-clients.seafile.com/seafile-deb/{{ ansible_distribution_release }}/ stable main
-      state: present
-      filename: seafile
-
-  - name: Update package cache and upgrade all packages
-    apt:
-      update_cache: yes
-      cache_valid_time: 3600
-      upgrade: dist
-      force_apt_get: yes
-    when: ansible_os_family == "Debian"
-
-  - name: install tools
-    package:
-      name:
-      - htop
-      - curl
-      - pwgen
-      - tree
-      - wget
-      - tar
-      - nano
-      - ca-certificates
-      - python3-psutil
-      - thunderbird
-      #- google-chrome-stable
-      - code
-      - gimp
-      #- naps2 (nicht hier...)
-      - seafile-gui
-      - keepassxc
-      - geany
-      - vlc
-      - flameshot
-      state: present
-
-  # teleport
-  - name: Download teleport deb
-    get_url:
-      url: https://cdn.teleport.dev/teleport_{{ teleport_version }}_amd64.deb
-      dest: /tmp/teleport_{{ teleport_version }}_amd64.deb
-
-  - name: Install Teleport Connect with the script
-    apt:
-      deb: /tmp/teleport_{{ teleport_version }}_amd64.deb
-      state: present
-    become: yes
-
   # naps2
   - name: Download and install NAPS2
     apt:
       deb: https://github.com/cyanfish/naps2/releases/download/v7.5.3/naps2-7.5.3-linux-x64.deb
-      state: present
-
-  # flameshot
-  - name: Ensure autostart directory exists
-    become_user: "{{ actual_user }}"
-    file:
-      path: "/home/{{ actual_user }}/.config/autostart"
-      state: directory
-      mode: '0755'
-
-  - name: Create Flameshot autostart entry
-    become_user: "{{ actual_user }}"
-    copy:
-      content: |
-        [Desktop Entry]
-        Type=Application
-        Name=Flameshot
-        Exec=flameshot
-        Icon=flameshot
-        Terminal=false
-        X-GNOME-Autostart-enabled=true
-      dest: "/home/{{ actual_user }}/.config/autostart/flameshot.desktop"
-      mode: '0644'
-
-  - name: Disable default screenshot shortcut
-    become_user: "{{ actual_user }}"
-    dconf:
-      key: "/org/gnome/settings-daemon/plugins/media-keys/screenshot"
-      value: "['']"
-
-  - name: Set custom keybinding for Flameshot
-    become_user: "{{ actual_user }}"
-    dconf:
-      key: "/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/{{ item.subkey }}"
-      value: "{{ item.value }}"
-      state: present
-    loop:
-      - { subkey: "binding", value: "'Print'" }
-      - { subkey: "command", value: "'/usr/bin/flameshot gui'" }
-      - { subkey: "name", value: "'flameshot'" }
-
-  - name: Enable custom keybindings
-    become_user: "{{ actual_user }}"
-    dconf:
-      key: "/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings"
-      value: "['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/']"
       state: present
 
   # docker
@@ -183,6 +82,7 @@
     args:
       creates: /usr/bin/docker
 
+  # Desktop customizing
   - name: copy wallpaper file
     copy:
       src: files/wallpaper.png
@@ -205,25 +105,21 @@
       src: files/bashrc
       dest: "/home/{{ actual_user }}/.bashrc"
       owner: "{{ actual_user }}"
-      owner: "{{ actual_user }}"
 
   - name: copy .gitconfig file
     copy:
       src: files/gitconfig
       dest: "/home/{{ actual_user }}/.gitconfig"
       owner: "{{ actual_user }}"
-      owner: "{{ actual_user }}"
 
-  - name: Next steps
+  - name: Last steps to finish your setup
     debug:
       msg: 
-        - "Next steps are:"
+        - "Last steps are:"
         - "1. Create Accounts in Seafile Client"
         - "2. Save ssh-keys to ~/.ssh and chmod 600 ~/.ssh/*"
-        - "3. Configure Thunderbird"
+        - "3. Configure Thunderbird (Mail and Calendar)"
         - "4. Reboot"
-
-
 
 #  - name: add ansible user
 #    user:
