--- a/roles/basic-tools/tasks/main.yml
+++ b/roles/basic-tools/tasks/main.yml
@@ -16,6 +16,7 @@
     - wget
     - tar
     - nano
+    - ncdu
     - ca-certificates
     - python3-psutil
     - thunderbird
@@ -23,29 +24,7 @@
     - keepassxc
     - geany
     - vlc
-    - wireguard
-    - openfortivpn
-    - syncthing
     state: present
-
-- name: Create Syncthing autostart entry
-  become_user: "{{ actual_user }}"
-  copy:
-    content: |
-      [Desktop Entry]
-      Name=Start Syncthing
-      GenericName=File synchronization
-      Comment=Starts the main syncthing process in the background.
-      Exec=/usr/bin/syncthing serve --no-browser --logfile=default
-      Icon=syncthing
-      Terminal=false
-      Type=Application
-      Keywords=synchronization;daemon;
-      Categories=Network;FileTransfer;P2P
-    dest: "/home/{{ actual_user }}/.config/autostart/syncthing-start.desktop"
-    mode: '0644'
-
-# Firewall für syncthing??
 
 - name: Pause for 5 seconds to build app cache
   ansible.builtin.pause:
