--- a/roles/desktop-customizing/tasks/main.yml
+++ b/roles/desktop-customizing/tasks/main.yml
@@ -4,15 +4,16 @@
     value: "{{ item.value }}"
     state: present
   loop:
-    - { key: "click-action", value: "'minimize'" }
-    - { key: "dash-max-icon-size", value: "28" }
-    - { key: "dock-alignment", value: "'START'" }
-    - { key: "dock-fixed", value: "true" }
-    - { key: "dock-position", value: "'LEFT'" }
-    - { key: "extend-height", value: "true" }
+    - { key: "click-action", value: "'minimize-or-previews'" }
+    - { key: "dash-max-icon-size", value: "28" }    # Dock: Benutzerdefinierte Größe 28
+    - { key: "dock-alignment", value: "'START'" }   # Dock: Dock and Icon Alignment on the Screen
+    - { key: "dock-fixed", value: "true" }          # Dock: Sichtbarkeit (immer sichtbar)
+    - { key: "dock-position", value: "'LEFT'" }     # Dock: Position am Desktop
+    - { key: "extend-height", value: "true" }       # Dock: Dock bis zum Rand erweitern
     - { key: "intellihide", value: "false" }
     - { key: "manualhide", value: "false" }
-    - { key: "show-mounts", value: "true" }
+    - { key: "show-mounts", value: "true" }         # Dock: Zeige gemountete Datenträger
+    - { key: "show-banners", value: "false" }       # Benachrichtigungen: nicht stören
 
 - name: Configure Application Starter in Dock
   become_user: "{{ actual_user }}"
@@ -28,12 +29,18 @@
     value: "'24h'"
     state: present
 
-- name: Set lock screen shortcut to Super+L
+- name: Keybindings for window locks
   become_user: "{{ actual_user }}"
   dconf:
-    key: "/org/gnome/settings-daemon/plugins/media-keys/screensaver"
-    value: "['<Super>l']"
+    key: "{{ item.key }}"
+    value: "{{ item.value }}"
     state: present
+  loop:
+    - { key: "/org/gnome/settings-daemon/plugins/media-keys/screensaver", value: "['<Super>l']" }   # Set lock screen shortcut to Super+L
+    - { key: "/org/gnome/mutter/keybindings/toggle-tiled-left", value: "['<Super>Left']" }          # Move Windows to the left
+    - { key: "/org/gnome/mutter/keybindings/toggle-tiled-right", value: "['<Super>Right']" }        # Move Windows to the right
+    - { key: "/org/gnome/shell/extensions/pop-shell/focus-left", value: "@as []" }
+    - { key: "/org/gnome/shell/extensions/pop-shell/focus-right", value: "@as []" }
 
 - name: copy wallpaper file
   copy:
